--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.6",
     "@reduxjs/toolkit": "^2.6.0",
+    "@supabase/supabase-js": "^2.49.1",
     "axios": "^1.8.1",
     "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
